Added some test cases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.datasource.password=mypass
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
-spring.jpa.hibernate.ddl-auto=update
+# Recreate the database on every run
+spring.jpa.hibernate.ddl-auto=create
 
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
