Moved "Value" based configuration properties to a proper configuration class.  Using durations for time rather then millis.  Cleaned up configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,6 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
 spring.jackson.time-zone= UTC
 
 ## App Properties
-app.jwtSecret= JWTSuperSecretKey
-app.jwtExpirationInMs = 604800000
+application.jwt.secret=JWTSuperSecretKey
+application.jwt.accessExpiration=15m
+application.jwt.refreshExpiration=365d
