Cleaned up the refresh workflow some more, fixed some tests, cleaned up some TODOs.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.jackson.time-zone= UTC
 application.jwt.secret=JWTSuperSecretKey
 application.jwt.accessExpiration=15m
 application.jwt.refreshExpiration=365d
+application.jwt.refreshPath=/api/auth/refresh
+application.jwt.refreshSystemRole=REFRESH_TOKEN
+application.jwt.refreshLeeway=30s
